# opencv-tests

./: pyproject.toml
image_classication_chapter_02/: Chapter_2.ipynb  Untitled.ipynb
scikit-image/: image basic manipulation.ipynb  image_of_shadow_pixels_values.csv
